Removed redundant comments, made small changes
- Improved build.gradle to specifies dependencies
- Used new switch/case statement syntax
- Fixed randEnum to prevent generics warning (unchecked type)